JDBC-3684 - Changing Parser name to WrapperBuilder with some changes in code structure. Adding run button to OJVM Java editor.